syntax = "proto3";

package rhythmony.metadata;
option go_package = "pb/";
option java_package = "com.rhythmony.metadata.pb";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

message Genre {
  string name = 1;
}

message Track {
  string id = 1;
  string title = 2;
  int32 disc_number = 3;
  int32 duration_ms = 4;
  optional bool explicit = 5;
  string type = 6;
  optional string lyrics = 7;
  int32 popularity = 8;
  repeated Artist artists = 9;
  repeated Album albums = 10;
}

message Artist {
  string id = 1;
  string name = 2;
  string bio = 3;
  string image = 4;
  string type = 5;
  int32 popularity = 6;
}

message Album {
  string id = 1;
  string title = 2;
  string album_type = 3;
  int32 total_tracks = 4;
  google.protobuf.Timestamp release_date = 5;
  string type = 6;
  string image = 7;
  repeated Genre genres = 8;
  string label = 9;
  uint32 popularity = 10;
  repeated Artist artists = 11;
  repeated Track tracks = 12;
}